--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra-docs-template",
+  "name": "nwmap",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "nwmap website",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/lmachens/nwmap.git"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "Leon Machens",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/lmachens/nwmap/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://github.com/lmachens/nwmap#readme",
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "2.0.1",
