--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   },
   "homepage": "https://github.com/lmachens/nwmap#readme",
   "dependencies": {
-    "next": "^13.0.6",
+    "next": "13.0.6",
     "nextra": "2.0.1",
     "nextra-theme-docs": "2.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "plausible-tracker": "0.3.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
-    "typescript": "^4.9.3"
+    "typescript": "4.9.3"
   }
 }
